--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
+    "redux-thunk": "^2.3.0",
     "superagent": "^4.0.0-beta.5",
     "superagent-promise": "^1.1.0",
     "validator": "^10.8.0"
