--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.83.0",
     "superagent": "^4.0.0-beta.5",
     "superagent-promise": "^1.1.0",
     "validator": "^10.8.0"
