--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "agent": "^0.2.1",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.6.0",
